--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -36,5 +36,5 @@ jobs:
         name: shadps4-win64
         # A file, directory or wildcard pattern that describes what to upload
         path: |
-          ${{github.workspace}}/build/Release/shadps4.exe
+          ${{github.workspace}}/build/Release/shadPS4.exe
           ${{github.workspace}}/build/Release/SDL3.dll
