--- a/.gitmodules
+++ b/.gitmodules
@@ -1,19 +1,3 @@
-[submodule "third-party/magic_enum"]
-	path = third-party/magic_enum
-	url = https://github.com/Neargye/magic_enum.git
-	shallow = true
-[submodule "third-party/zydis"]
-	path = third-party/zydis
-	url = https://github.com/zyantific/zydis.git
-	shallow = true
-[submodule "third-party/toml11"]
-	path = third-party/toml11
-	url = https://github.com/ToruNiina/toml11
-	branch = master
-[submodule "third-party/xxHash"]
-	path = third-party/xxHash
-	url = https://github.com/Cyan4973/xxHash.git
-	branch = dev
 [submodule "externals/discord-rpc"]
 	path = externals/discord-rpc
 	url = https://github.com/shadps4-emu/ext-discord-rpc.git
@@ -60,3 +44,15 @@
 [submodule "externals/winpthreads"]
 	path = externals/winpthreads
 	url = https://github.com/shadps4-emu/winpthreads.git
+[submodule "externals/magic_enum"]
+	path = externals/magic_enum
+	url = https://github.com/Neargye/magic_enum.git
+[submodule "externals/toml11"]
+	path = externals/toml11
+	url = https://github.com/ToruNiina/toml11.git
+[submodule "externals/xxHash"]
+	path = externals/xxHash
+	url = https://github.com/Cyan4973/xxHash.git
+[submodule "externals/zydis"]
+	path = externals/zydis
+	url = https://github.com/zyantific/zydis.git
