video: Import new shader recompiler + display a triangle (#142)

--- a/.gitmodules
+++ b/.gitmodules
@@ -56,3 +56,6 @@
 [submodule "externals/zydis"]
 	path = externals/zydis
 	url = https://github.com/zyantific/zydis.git
+[submodule "externals/sirit"]
+	path = externals/sirit
+	url = https://github.com/raphaelthegreat/sirit
