video_core: Bringup some basic functionality (#145)
* video_core: Remove hack in rasterizer

* The hack was to skip the first draw as the display buffer had not been created yet and the texture cache couldn't create one itself. With this patch it now can, using the color buffer parameters from registers

* shader_recompiler: Implement attribute loads/stores

* video_core: Add basic vertex, index buffer handling and pipeline caching

* externals: Make xxhash lowercase

--- a/.gitmodules
+++ b/.gitmodules
@@ -50,12 +50,12 @@
 [submodule "externals/toml11"]
 	path = externals/toml11
 	url = https://github.com/ToruNiina/toml11.git
-[submodule "externals/xxHash"]
-	path = externals/xxHash
-	url = https://github.com/Cyan4973/xxHash.git
 [submodule "externals/zydis"]
 	path = externals/zydis
 	url = https://github.com/zyantific/zydis.git
 [submodule "externals/sirit"]
 	path = externals/sirit
 	url = https://github.com/raphaelthegreat/sirit
+[submodule "externals/xxhash"]
+	path = externals/xxhash
+	url = https://github.com/Cyan4973/xxHash.git
