core: Properly implement TLS (#164)
* core: Split module code from linker

* linker: Properly implement thread local storage

* kernel: Fix a few memory functions

* kernel: Implement module loading

* Now it's easy to do anyway with new module rework

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -287,8 +287,9 @@ set(CORE src/core/aerolib/stubs.cpp
          src/core/linker.h
          src/core/memory.cpp
          src/core/memory.h
+         src/core/module.cpp
+         src/core/module.h
          src/core/platform.h
-         src/core/memory.h
          src/core/tls.cpp
          src/core/tls.h
          src/core/virtual_memory.cpp
