--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -190,6 +190,10 @@ set(PAD_LIB src/core/libraries/pad/pad.cpp
             src/core/libraries/pad/pad.h
 )
 
+set(PNG_LIB src/core/libraries/libpng/pngdec.cpp
+            src/core/libraries/libpng/pngdec.h
+)
+
 set(NP_LIBS src/core/libraries/np_manager/np_manager.cpp
             src/core/libraries/np_manager/np_manager.h
             src/core/libraries/np_score/np_score.cpp
@@ -290,6 +294,7 @@ set(CORE src/core/aerolib/stubs.cpp
          ${PAD_LIB}
          ${VIDEOOUT_LIB}
          ${NP_LIBS}
+         ${PNG_LIB}
          ${MISC_LIBS}
          src/core/linker.cpp
          src/core/linker.h
