--- a/.gitmodules
+++ b/.gitmodules
@@ -51,10 +51,10 @@
 	url = https://github.com/zyantific/zydis.git
 [submodule "externals/sirit"]
 	path = externals/sirit
-	url = https://github.com/raphaelthegreat/sirit
+	url = https://github.com/raphaelthegreat/sirit.git
 [submodule "externals/xxhash"]
 	path = externals/xxhash
 	url = https://github.com/Cyan4973/xxHash.git
 [submodule "externals/tracy"]
 	path = externals/tracy
-	url = https://github.com/shadps4-emu/tracy
+	url = https://github.com/shadps4-emu/tracy.git
