--- a/.gitmodules
+++ b/.gitmodules
@@ -60,4 +60,4 @@
 	url = https://github.com/shadps4-emu/tracy.git
 [submodule "externals/hwinfo"]
 	path = externals/hwinfo
-	url = https://github.com/shadps4-emu/ext-hwinfo.git
+	url = https://github.com/lfreist/hwinfo.git
