Add patches for F16C instructions under Rosetta 2.

--- a/.gitmodules
+++ b/.gitmodules
@@ -82,3 +82,6 @@
 	path = externals/ffmpeg-core
 	url = https://github.com/shadps4-emu/ext-ffmpeg-core.git
 	shallow = true
+[submodule "externals/half"]
+	path = externals/half
+	url = https://github.com/ROCm/half.git
